Fix font size in new post panel on small screens (#579)
This commit fixes a bug where enormous font size for the title of the
new post panel made it impossible to submit on very small screens like
the iPhone 5.

Fixes #465

--- a/static/sass/components/_new-post-panel.scss
+++ b/static/sass/components/_new-post-panel.scss
@@ -195,9 +195,15 @@
 }
 
 .new-post-panel h2 {
-    font-size: 60px;
+    font-size: 30px;
     font-weight: bold;
     margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+    .new-post-panel h2 {
+        font-size: 60px;
+    }
 }
 
 .new-post-panel p {
